Kinematics: características de un robot

--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -42,35 +42,41 @@
 \begin{frame}
     \frametitle{Locomoción}
 
-	\begin{block}{Manipulación}
-    	Un brazo robótica está fijo y mueve objetos en su espacio de trabajo aplicando fuerza sobre ellos.
-	\end{block}
-   
-    \begin{block}{Locomoción}
+    \begin{block}{Locomoción de un robot móvil}
 		El entorno está fijo y el robot se mueve impartiendo fuerza sobre el entorno.
 	\end{block}
 
-    \begin{itemize}
-        \item Estabilidad
-        \begin{itemize}
-            \item Geometría y Número de puntos de contacto
-            \item Centro de gravedad
-            \item Estabilidad estática y dinámica
-            \item Inclinación del terreno
-        \end{itemize}
-        \item Característica de contacto
-        \begin{itemize}
-            \item Punto de contacto/ distancia y forma de camino
-            \item Ángulo de contacto
-            \item Fricción
-        \end{itemize}
-        \item Tipo de entorno
-        \begin{itemize}
-            \item Estructura
-            \item Medio (agua, aire, terreno suave o firme)
-        \end{itemize}
-    \end{itemize}
+	\begin{block}{Locomoción de un Brazo Robótico (Manipulación)}
+    	Un brazo robótico está fijo y mueve objetos en su espacio de trabajo aplicando fuerza sobre ellos.
+	\end{block}
+
 \end{frame}
+
+\begin{frame}<presentation:0>[noframenumbering]
+	\frametitle{Características de un robot}
+	
+	\begin{itemize}
+		\item Estabilidad
+		\begin{itemize}
+			\item Geometría y Número de puntos de contacto
+			\item Centro de gravedad
+			\item Estabilidad estática y dinámica
+			\item Inclinación del terreno
+		\end{itemize}
+		\item Característica de contacto
+		\begin{itemize}
+			\item Punto de contacto/ distancia y forma de camino
+			\item Ángulo de contacto
+			\item Fricción
+		\end{itemize}
+		\item Tipo de entorno
+		\begin{itemize}
+			\item Estructura
+			\item Medio (agua, aire, terreno suave o firme)
+		\end{itemize}
+	\end{itemize}
+\end{frame}
+
 
 \begin{frame}
     \frametitle{Locomoción: Robots con patas}
@@ -178,9 +184,7 @@
     	    El robot está restringido a solo ciertos movimientos. Un ejemplo, es un automóvil que no es capaz de conducir de lado (modelo de Ackermann).
     \end{block}
     
-
-
-    
+  
     \TODO{se puede agregar las descripciones de ismael para dejar las slides completas.}
 \end{frame}
 
