Add robot images

--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -47,14 +47,26 @@
    	
    	\begin{figure}[!h]
    		\centering
-   		\subfloat[Fija]
+   		\subfloat[Snake Robot]
+        {
+            \includegraphics[width=0.15\columnwidth]{./images/weed_removal_robot.jpg}
+        }
+   		\subfloat[]
    		{
-   			\includegraphics[width=0.15\columnwidth]{./images/fix_wheel.png}
+   			\includegraphics[width=0.15\columnwidth]{./images/weed_removal_robot.jpg}
    		}
-   		\subfloat[Direccional]
+   		\subfloat[]
    		{
        		\includegraphics[width=0.15\columnwidth]{images/hexapod_phantomX_mark_II.jpg}
    		}
+  		\subfloat[]
+        {
+            \includegraphics[width=0.15\columnwidth]{images/drone.jpg}
+        }
+      	\subfloat[]
+        {
+            \includegraphics[width=0.15\columnwidth]{images/aqua.png}
+        }
    	\end{figure}
 
     
