--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -47,29 +47,35 @@
    	
    	\begin{figure}[!h]
    		\centering
-   		\subfloat[Snake Robot]
+   		\subfloat[ACM-R5H (Anfíbio)]
         {
-            \includegraphics[width=0.15\columnwidth]{./images/weed_removal_robot.jpg}
+            \includegraphics[width=0.15\columnwidth]{./images/acm-r5h_snake_robot.jpg}
         }
-   		\subfloat[]
-   		{
-   			\includegraphics[width=0.15\columnwidth]{./images/weed_removal_robot.jpg}
-   		}
    		\subfloat[]
    		{
        		\includegraphics[width=0.15\columnwidth]{images/hexapod_phantomX_mark_II.jpg}
    		}
-  		\subfloat[]
+		\subfloat[ASIMO de Honda]
+   		{
+   			\includegraphics[width=0.1\columnwidth]{images/asimo_robot.jpg}
+   		}
+		\subfloat[Robot desmalezador]
+   		{
+   			\includegraphics[width=0.15\columnwidth]{./images/weed_removal_robot.jpg}
+   		}
+  		\subfloat[Drone Amazon]
         {
             \includegraphics[width=0.15\columnwidth]{images/drone.jpg}
+        }
+  		\subfloat[Drone Amazon]
+        {
+        	\includegraphics[width=0.15\columnwidth]{images/wingtra_hybrid_aerial_robot.jpg}
         }
       	\subfloat[]
         {
             \includegraphics[width=0.15\columnwidth]{images/aqua.png}
         }
    	\end{figure}
-
-    
 
     La elección del método de locomoción depende de varios factores, como el tipo de entorno en el que el robot operará, los objetivos de la misión y las limitaciones de diseño. 
 
