--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -36,6 +36,16 @@
 \end{frame}
 
 \begin{frame}
+	\frametitle{Transformaciones...}
+	
+	\begin{figure}[!h]
+		\includegraphics[width=\columnwidth]{./images/joke_coordinate_systems.png}
+	\end{figure}
+	
+\end{frame}
+
+
+\begin{frame}
     \frametitle{Rotación en 2D}
 
         \begin{center}
