--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-    \frametitle{Representación de pose en 2D}
+    \frametitle{Transformaciones en 2D}
     \small
     \begin{center}
         \includegraphics[width=0.3\columnwidth]{./images/coordinate_frames.pdf}
@@ -17,7 +17,7 @@
 
 
 \begin{frame}
-    \frametitle{Representación de pose en 2D}
+    \frametitle{Transformaciones en 2D}
     
     \begin{figure}[!h]
         \includegraphics[width=0.6\columnwidth]{./images/multiple_coordinate_frames_2d.pdf}
@@ -27,7 +27,7 @@
 
 
 \begin{frame}
-    \frametitle{Representación de pose en 3D}
+    \frametitle{Transformaciones en 3D}
 
     \begin{figure}[!h]
         \includegraphics[width=0.6\columnwidth]{./images/multiple_coordinate_frames_3d.pdf}
