--- a/teoricas/teorica_02/src/kinematics.tex
+++ b/teoricas/teorica_02/src/kinematics.tex
@@ -94,6 +94,8 @@
 
     \begin{align*}
         \dot{\transform{R}{}} &= 
+        R\left(\dfrac{\pi}{2}\right)\dot{\transform{I}{}}\\
+        \dot{\transform{R}{}} &= 
         \rotationCoord{R}{I}\dot{\transform{I}{}}\\
         \toCoord{\begin{bmatrix}
         			\dot{y}\\
@@ -115,7 +117,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Modelo de cinemática directa de un robot diferencial}
+    \frametitle{Cinemática directa de un robot diferencial}
     \scriptsize
     \begin{figure}[!h]
         \centering
@@ -142,61 +144,92 @@
     \end{equation*}
     donde
     \begin{itemize}
+        \item $l$ es la distancia de cada rueda al punto $\point$ (punto en el medio del eje de las ruedas).
         \item $r$ es el diámetro de las ruedas.
-        \item $p$ es punto en el medio del eje de las ruedas
-        \item $l$ es la distancia de cada rueda al punto $p$
-        \item $\dot{\varphi}_{1}$ y $\dot{\varphi}_{2}$ la velocidad de giro de cada rueda
+        \item $\dot{\varphi}_{1}$ y $\dot{\varphi}_{2}$ la velocidad de giro de la rueda derecha e izquierda, respectivamente.
     \end{itemize}
 
     Podemos calcular el movimiento del robot en el marco de referencia global a partir del movimiento en su marco de referencia local:  $\dot{\transform{I}{}} = \inverse{\rotationCoord{R}{I}}\dot{\transform{R}{}}$. Por lo tanto, la estrategia será calcular primero la contribución de cada una de las dos ruedas en el marco de referencia local $\dot{\transform{R}{}}$.
 \end{frame}
 
 \begin{frame}
-    \frametitle{Cinemática de un robot diferencial}
+    \frametitle{Cinemática directa de un robot diferencial}
+    \footnotesize
+    \begin{center}
+        \includegraphics[width=0.15\columnwidth]{./images/coordinate_systems.pdf}
+    \end{center}
+    
+    %Supongamos que el sistema de referencia local del robot está alineado de manera que el robot se mueva hacia adelante, como se muestra en la figura.
+    
+    Primero, consideremos la contribución de la {\bf velocidad de giro de cada rueda} a la {\bf velocidad de traslación en el punto $\point$} en dirección $+X_{R}$ (hacia adelante del robot).
+    
+    \begin{itemize}
+        \item Si una rueda gira mientras la otra no aporta nada (estacionaria), dado que $\point$ está en el medio entre las dos ruedas, el robot se moverá con la mitad de la velocidad. Por lo tanto, la contribución de cada rueda a la velocidad de traslación en dirección $+X_{R}$ está dada por:
+        \begin{equation*}
+            \dot{x}_{r1} = \left(\frac{1}{2}\right)r\dot{\varphi}_{1} \qquad
+            \dot{x}_{r2} = \left(\frac{1}{2}\right)r\dot{\varphi}_{2}
+        \end{equation*}
+    
+        \item En un robot diferencial, estas dos contribuciones simplemente se pueden sumar para calcular el componente $\dot{x}_{R}$ de $\dot{\transform{R}{}}$.
+        
+        \begin{equation*}
+            \dot{x}_{R} = \dot{x}_{r1} + \dot{x}_{r2} = \left(\frac{1}{2}\right)r\dot{\varphi}_{1} + \left(\frac{1}{2}\right)r\dot{\varphi}_{2}
+        \end{equation*}
+    \end{itemize}
+
+   
+\end{frame}
+
+\begin{frame}
+    \frametitle{Cinemática directa de un robot diferencial}
     \footnotesize
     \begin{center}
         \includegraphics[width=0.3\columnwidth]{./images/coordinate_systems.pdf}
     \end{center}
-    Suponga que el sistema de referencia local del robot está alineado de manera que el robot se mueva hacia adelante, como se muestra en la figura.
     
-    Primero, considere la contribución de la {\bf velocidad de giro de cada rueda} a la {\bf velocidad de traslación en el punto $\point$} en dirección $+X_{R}$. Si una rueda gira mientras la otra no aporta nada (estacionaria), dado que $\point$ está en el medio entre las dos ruedas, el robot se moverá con la mitad de la velocidad: $\dot{x}_{r1} = \left(\frac{1}{2}\right)r\dot{\varphi}_{1}$ y $ \dot{x}_{r2} = \left(\frac{1}{2}\right)r\dot{\varphi}_{2}$. En un robot de accionamiento diferencial, estas dos contribuciones simplemente se pueden sumar para calcular el componente $\dot{x}_{R}$ de $\dot{\transform{R}{}}$.
+    
+    \begin{itemize}
+        \item Pregunta: ¿Qué pasa si cada rueda gira en direcciones opuestas? ¿Cuál es el valor de $\dot{x}_{R}$?
+        
+        
+        \note{Considere, por ejemplo, un robot diferencial en el que cada rueda gira con la misma velocidad pero en direcciones opuestas. El resultado es un robot giratorio estacionario. Como era de esperar, x_R será cero en este caso.}
+        
+        
+        \item El valor de $\dot{y}_{R}$ es aún más sencillo de calcular. Ninguna de las ruedas puede contribuir al movimiento lateral en el marco de referencia del robot, por lo que $\dot{y}_{R}$ es siempre cero.
+    \end{itemize}
+    
+
 \end{frame}
 
 \begin{frame}
-    \frametitle{Cinemática de un robot diferencial}
-    \footnotesize
-    \begin{center}
-        \includegraphics[width=0.3\columnwidth]{./images/coordinate_systems.pdf}
-    \end{center}
-    
-    Pregunta: ¿Qué pasa si cada rueda gira en direcciones opuestas? ¿Cuál es el valor de $\dot{x}_{R}$?
- 
-
-
-    \note{Considere, por ejemplo, un robot diferencial en el que cada rueda gira con la misma velocidad pero en direcciones opuestas. El resultado es un robot giratorio estacionario. Como era de esperar, x_R será cero en este caso.}
-    
-    El valor de $\dot{y}_{R}$ es aún más sencillo de calcular. Ninguna de las ruedas puede contribuir al movimiento lateral en el marco de referencia del robot, por lo que $\dot{y}_{R}$ es siempre cero.
-\end{frame}
-
-\begin{frame}
-    \frametitle{Cinemática de un robot diferencial}
+    \frametitle{Cinemática directa de un robot diferencial}
     \small
 
-    Finalmente, debemos calcular la componente rotacional $\dot{\theta}_{R}$ de $\dot{\transform{R}{}}$. Una vez más, las contribuciones de cada rueda se pueden calcular de forma independiente y simplemente sumarlas. Considere la rueda derecha (a esta rueda la llamaremos 1). El giro hacia adelante de esta rueda da como resultado una rotación en sentido antihorario en el punto $\point$. Recuerde que si la rueda 1 gira sola, el robot pivota alrededor de la rueda 2. La velocidad de rotación $\omega_{1}$ en $\point$ se puede calcular porque la rueda se mueve instantáneamente a lo largo del arco de un círculo de radio $2l$:
+    Finalmente, debemos calcular la componente rotacional $\dot{\theta}_{R}$ de $\dot{\transform{R}{}}$. Una vez más, las contribuciones de cada rueda se pueden calcular de forma independiente y simplemente sumarlas. 
+    
 
-    \begin{equation*}
-        \omega_{1} = \dfrac{r\dot{\varphi_{1}}}{2l}
-    \end{equation*}
+    
+    \begin{itemize}
+        \item Consideremos la rueda derecha (denotada con 1). Si la rueda 1 gira sola, el robot pivota alrededor de la rueda 2. El giro hacia adelante de esta rueda da como resultado una rotación en sentido antihorario en el punto $\point$.
+        
+        \item La contribución a la velocidad de rotación por la rueda derecha, $\omega_{1}$, en el $\point$ se puede calcular porque la rueda se mueve instantáneamente a lo largo del arco de un círculo de radio $2l$:
+        
+        \begin{equation*}
+            \omega_{1} = \dfrac{r\dot{\varphi_{1}}}{2l}
+        \end{equation*}
+        
+        \item El mismo cálculo se aplica a la rueda izquierda, con la excepción de que el giro hacia adelante da como resultado una rotación en el sentido de las agujas del reloj en el punto $\point$:
+        
+        \begin{equation*}
+            \omega_{2} = \dfrac{-r\dot{\varphi_{2}}}{2l}
+        \end{equation*}
+    \end{itemize}
 
-    El mismo cálculo se aplica a la rueda izquierda, con la excepción de que el giro hacia adelante da como resultado una rotación en el sentido de las agujas del reloj en el punto:
 
-    \begin{equation*}
-        \omega_{2} = \dfrac{-r\dot{\varphi_{2}}}{2l}
-    \end{equation*}
 \end{frame}
 
 \begin{frame}
-    \frametitle{Cinemática de un robot diferencial}
+    \frametitle{Cinemática directa de un robot diferencial}
     
     \TODO{Agregar ICC info para el TP2. Obtenerla de: \url{https://www.cs.columbia.edu/~allen/F17/NOTES/icckinematics.pdf}}
     
