--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -234,19 +234,18 @@
 	Describe una rotación en relación con el sistema de coordenadas local del objeto. Los ejes del objeto pueden cambiar durante la rotación.
 	\end{block}
 
-	\begin{figure}[!h]
-		\centering
-		\includegraphics[width=0.5\columnwidth]{./images/intrinsic_rotation.pdf}
-	\end{figure}  
-	
+    \begin{center}
+        \includegraphics[width=0.7\columnwidth]{./images/intrinsic_rotation.pdf}
+    \end{center}
+
 	\begin{block}{Rotación Extrínseca}
 		Describe una rotación en relación con un sistema de coordenadas global fijo en el espacio. El sistema de referencia es externo al objeto que está siendo rotado.
 	\end{block}
 	
-	\begin{figure}[!h]
-		\centering
-		\includegraphics[width=0.5\columnwidth]{./images/extrinsic_rotation.pdf}
-	\end{figure}   
+    \begin{center}
+        \includegraphics[width=0.7\columnwidth]{./images/extrinsic_rotation.pdf}
+    \end{center}
+		
 	
 	\note{Copiar slides donde se muestra que las rotaciones intrínsecas son equivalentes a las rotaciones extrínsecas: https://www.youtube.com/watch?v=icczqt73B7o}
 	
